--- a/gnuplote.conf
+++ b/gnuplote.conf
@@ -1,7 +1,7 @@
 set terminal png size 1200,800
-set output "courbe.png"
+set output "courbe_cache.png"
 set grid
-set xlabel "pourquoi tu commences a 1"
-set ylabel "temps processeur"
-set title "Coucouille"
-plot "resultat.txt" using 1 with lines
+set xlabel "taille matrice"
+set ylabel "nombre de cycles par instruction"
+set title "nombre de cycles par instruction en fonction de la taille de la matrice"
+plot "resultat_cache.txt" using 1 with lines
